--- a/algorithm/src/main/resources/application.properties
+++ b/algorithm/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+xxl.job.admin.addresses=http://localhost:8081/xxl-job-admin
+xxl.job.executor.appname=demo
+xxl.job.executor.ip=127.0.0.1
+xxl.job.executor.port=9999
+xxl.job.accessToken=
+xxl.job.executor.logpath=
+xxl.job.executor.logretentiondays=
