--- a/algorithm/pom.xml
+++ b/algorithm/pom.xml
@@ -100,6 +100,12 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
+        <!-- 加解密 https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter -->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>3.0.3</version>
+        </dependency>
     </dependencies>
 
     <build>
