redis bitmap demo

--- a/algorithm/src/main/resources/application.properties
+++ b/algorithm/src/main/resources/application.properties
@@ -5,3 +5,5 @@ xxl.job.executor.port=9999
 xxl.job.accessToken=
 xxl.job.executor.logpath=
 xxl.job.executor.logretentiondays=
+spring.redis.host=localhost
+spring.redis.port=6379
