--- a/algorithm/src/main/resources/application.properties
+++ b/algorithm/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8080
 xxl.job.admin.addresses=http://localhost:8081/xxl-job-admin
 xxl.job.executor.appname=demo
 xxl.job.executor.ip=127.0.0.1
